Working pre leptos

--- a/templates/index.html
+++ b/templates/index.html
@@ -16,7 +16,7 @@
       <p class="creator">Added by: {{ quote.creator }}</p>
     </div>
 
-    <form action="/api/quotes/random" method="get">
+    <form action="/" method="get">
       <button type="submit">Random Quote</button>
     </form>
 
@@ -42,7 +42,7 @@
   </body>
 </html>
 
-<!-- Added to test if adding quote form is working. Framework from stack overflow-->
+<!-- Added to test if adding quote form is working. Framework from stack overflow -->
 <script>
   document
     .getElementById("add-quote-form")
